<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroud_color"
    tools:context=".NextActivity">

    <Toolbar
        android:id="@+id/toolbar_actionbar"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:title="@string/app_name"
        android:titleTextColor="#fff"
        android:gravity="center"
        android:layout_gravity="center"
        android:fitsSystemWindows="true" />


    <TextView
        android:id="@+id/queoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_margin="8dp"
        android:text="@string/who_is_the_best_cricketer_in_the_world"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radiotendulkar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sachin_tendulkar"
             />

        <RadioButton
            android:id="@+id/radiokolli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/virat_kolli" />

        <RadioButton
            android:id="@+id/radioAdam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adam_gilchirst" />
        <RadioButton
            android:id="@+id/radiokallis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jacques_kallis" />

    </RadioGroup>



    <Button
        android:id="@+id/nextbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_margin="16dp"
        android:text="Next" />
</LinearLayout>